# src/main/java/io/idev/rimberry/controller/FactoryController.java
@@ -1,17 +1,17 @@
 package io.idev.rimberry.controller;
 
 import java.util.List;
-import java.util.Optional;
 
 import javax.validation.Valid;
 import javax.validation.constraints.NotNull;
 
+import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
-import org.springframework.web.context.request.NativeWebRequest;
 
 import io.idev.rimberry.StoreApiConstants;
+import io.idev.rimberry.service.FactoryServiceImpl;
 import io.idev.storeapi.api.controller.FactoryApi;
 import io.idev.storeapi.model.FactoryDto;
 import io.idev.storeapi.model.Response;
@@ -20,22 +20,31 @@ import io.idev.storeapi.model.Response;
 @RestController
 public class FactoryController implements FactoryApi {
 
-	@Override
-	public Optional<NativeWebRequest> getRequest() {
-		// TODO Auto-generated method stub
-		return FactoryApi.super.getRequest();
+
+	private FactoryServiceImpl factoryServiceImpl;
+
+	public FactoryController(FactoryServiceImpl factoryServiceImpl) {
+		this.factoryServiceImpl = factoryServiceImpl;
 	}
 
 	@Override
 	public ResponseEntity<Response> addFactory(@Valid FactoryDto factoryDto) {
-		// TODO Auto-generated method stub
-		return FactoryApi.super.addFactory(factoryDto);
+		this.factoryServiceImpl.add(factoryDto);
+		Response response = new Response().code(200).message("Factory Added!").details(null);
+		return new ResponseEntity<Response>(response, HttpStatus.OK);
+	}
+	
+	@Override
+	public ResponseEntity<List<FactoryDto>> getFactories() {
+		return new ResponseEntity<>(this.factoryServiceImpl.getAll(), HttpStatus.OK);
 	}
 
 	@Override
 	public ResponseEntity<Response> deleteFactory(Integer factoryId) {
-		// TODO Auto-generated method stub
-		return FactoryApi.super.deleteFactory(factoryId);
+		this.factoryServiceImpl.delete(factoryId);
+		Response response = new Response().code(200).message(String.format("Factory with ID %d Deleted", factoryId))
+				.details(null);
+		return new ResponseEntity<Response>(response, HttpStatus.OK);
 	}
 
 	@Override
@@ -50,7 +59,4 @@ public class FactoryController implements FactoryApi {
 		return FactoryApi.super.searchFactory(text);
 	}
 
-	
-	
-	
 }
